re PR target/37909 (internal compiler error: in fixup_mova, at config/sh/sh.c:3756)

PR target/37909
	Backport from mainline:
	* config/sh/sh.c (untangle_mova): Return -1 when NEW_MOVA has
	no address.

From-SVN: r141486